[package]
name = "ibkrrusty"
version = "0.1.0"
edition = "2024"
authors = ["pixam github@pixelizedambitions.com"]
license = "MIT"
description = "Unofficial Rust client library for the Interactive Brokers (IBKR) Web API"
repository = "https://github.com/pixambi/ibkrrusty"
homepage = "https://github.com/pixambi/ibkrrusty"
documentation = "https://docs.rs/ibkrrusty"
readme = "README.md"
keywords = ["trading", "api", "ibkr", "interactive-brokers", "finance"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.142"

[dev-dependencies]
dotenv = "0.15"

[[example]]
name = "sessions_usage"
path = "examples/sessions_usage.rs"
